--- a/.github/workflows/test-prod.yml
+++ b/.github/workflows/test-prod.yml
@@ -8,5 +8,23 @@ on:
 jobs:
   live-test:
     name: Production
-    uses: ./.github/workflows/test.yml
-    secrets: inherit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js 20
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20  # Specify Node.js 20
+
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8  # Ensure compatibility with Node.js 20
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Run tests
+        run: pnpm test
